# CanadianExperience

./: CMakeLists.txt  CanadianExperienceApp.cpp  CanadianExperienceApp.h  MovieAnimationEmmanuel.anim
CanadianExperienceLib/: Actor.cpp  Actor.h  CMakeLists.txt  Drawable.h  Machine1Factory.cpp  Machine1Factory.h  Machine2CEfactory.cpp  Machine2CEfactory.h  MachineDrawable.cpp  MachineDrawable.h  MainFrame.cpp  Picture.cpp  PictureFactory.cpp  PictureFactory.h  SpartyFactory.cpp  ViewEdit.cpp  ViewEdit.h
MachineDemo/: CMakeLists.txt  MachineSystemIsolator.h  main.cpp  pch.h
MachineLib/: BubbleBlower.cpp  BubbleBlower.h  Bubbles.cpp  Bubbles.h  CMakeLists.txt  Component.cpp  Component.h  Const.cpp  Const.h  Flag.cpp  Flag.h  Machine.cpp  Machine.h  Machine2Factory.cpp  Machine2Factory.h  MachineCFactory.cpp  MachineCFactory.h  MachineStandin.cpp  MachineStandin.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MachineSystemFactory.h  MachineSystemStandin.cpp  MachineSystemStandin.h  Motor.cpp  Motor.h  Polygon.cpp  Polygon.h  Pulley.cpp  Pulley.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h
MachineTests/: MachineTest.cpp
Tests/: ActorTest.cpp  AnimChannelAngleTest.cpp  DrawableTest.cpp  ImageDrawableTest.cpp  PictureObserverTest.cpp  PictureTest.cpp  PolyDrawableTest.cpp  TimelineTest.cpp
html/: _actor_8cpp.html  _actor_8h.html  _actor_8h.js  _actor_8h_source.html  _anim_channel_8cpp.html  _anim_channel_8h.html  _anim_channel_8h.js  _anim_channel_8h_source.html  _anim_channel_angle_8cpp.html  (+399 more)
(+79 files in other folders)
